Response to TREES reviewers
Made changes to the bootstrapping that made the analysis more robust.
Increased the number of pulls.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@ RWL/*
 *.pdf
 
 
+
+table_2_chron_stats.xlsx
+
+Table1_var_ranges.xlsx
+
+XX_ME_acer_test.R
+
+valles_tree_data.csv
+
+valles_core_data_06172016.xlsx
